[package]
name = "rust_unit_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.63"
tokio = { version = "1.24.2", features = ["macros", "time", "rt"] }

[dev-dependencies]
test-context = "0.1.4"
